# Code_Review_Project

./: .env.example  .gitignore  BACKEND_FIX_LOG.md  BACKEND_README.md  README.md  alembic.ini  pyproject.toml
Design/: design_version1.md  design_version1_cn.md
app/: config.py  database.py  main.py  worker.py
app/agent/: graph.py
app/analyzer/: __init__.py  bandit.py  base.py  eslint.py  semgrep.py  staticcheck.py
app/auth/: service.py
app/git/: service.py
app/models/: __init__.py  audit.py  knowledge.py  review.py  user.py
app/rag/: embeddings.py  hybrid_search.py  knowledge.py  rerank.py
app/report/: __init__.py  html.py  markdown.py  pdf.py
app/review/: merger.py  service.py
app/routers/: auth.py  knowledge.py  reviews.py  webhooks.py
app/schemas/: __init__.py  knowledge.py  review.py  user.py
app/webhook/: bitbucket.py  github.py  gitlab.py
docker/: compose-dev.yml  compose-prod.yml
frontend/: index.html
frontend/v1-dark-indigo/: 01-login.html  02-dashboard.html  03-submit-review.html  04-review-list.html  05-review-detail.html  06-issue-viewer.html  07-report-viewer.html  08-knowledge-base.html  09-webhook-setup.html  10-quality-gate.html  index.html
frontend/v10-rose/: 01-login.html  02-dashboard.html  03-submit-review.html  04-review-list.html  05-review-detail.html  06-issue-viewer.html  07-report-viewer.html  08-knowledge-base.html  09-webhook-setup.html  10-quality-gate.html  index.html
frontend/v2-light-clean/: 01-login.html  02-dashboard.html  03-submit-review.html  04-review-list.html  05-review-detail.html  06-issue-viewer.html  07-report-viewer.html  08-knowledge-base.html  09-webhook-setup.html  10-quality-gate.html  index.html
migrations/: env.py
tests/: conftest.py
(+96 files in other folders)
