[tool.poetry]
name = "codeguardian-ai"
version = "0.1.0"
description = "Intelligent Code Review Agent — multi-language, context-aware, powered by LLM + static analysis + RAG"
authors = ["CodeGuardian Team"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.32" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0" }
asyncpg = "^0.30"
alembic = "^1.14"
celery = { extras = ["redis"], version = "^5.4" }
redis = "^5.2"
langchain = "^0.3"
langgraph = "^0.2"
langchain-openai = "^0.2"
langchain-community = "^0.3"
rank-bm25 = "^0.2"
sentence-transformers = "^3.3"
gitpython = "^3.1"
pygithub = "^2.5"
python-gitlab = "^5.0"
jinja2 = "^3.1"
python-jose = { extras = ["cryptography"], version = "^3.3" }
passlib = { extras = ["bcrypt"], version = "^1.7" }
pydantic-settings = "^2.6"
loguru = "^0.7"
opentelemetry-sdk = "^1.29"
opentelemetry-api = "^1.29"
boto3 = "^1.35"
httpx = "^0.28"
tree-sitter = "^0.23"
python-multipart = "^0.0.20"
aiofiles = "^24.1"
tenacity = "^9.0"
pydantic = {extras = ["email"], version = "^2.13.4"}
bcrypt = "<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
pytest-cov = "^6.0"
httpx = "^0.28"
ruff = "^0.8"
mypy = "^1.13"
factory-boy = "^3.3"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
